# microscopy-analysis

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  PLAN_DATASET_EXPLORER.md  README.md  pyproject.toml  pytest.ini  requirements-apple.txt  requirements-cuda.txt  requirements-explorer.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: repro-tests.yml
configs/cloud/: gcp_t4_repro.md
configs/experiments/: ebc1_smoke.yaml  (+16 more)
data/: README.md
docs/: ENTERPRISE_SAAS_DESIGN.md
explorer/: _bootstrap.py  app.py  path_setup.py  requirements.txt
paper/: notebook_baseline.md  target_metrics.csv
scripts/: aggregate_low_data.py  aggregate_results.py  build_data_archive.sh  build_results_archive.sh  cloud_gcp_t4.sh  download_data.sh  evaluate.py  run_explorer.sh  run_low_data.py  run_matrix.py  setup_env.sh  smoke_test.py  train.py  train_all_baselines.sh  train_all_se_resnet50.sh  train_baselines_except_super2.sh  visualize_predictions.py
tests/: conftest.py  test_aggregate_results.py  test_dataset_adapter.py  test_evaluate.py  test_explorer_bootstrap.py  test_explorer_coco.py  test_explorer_lib.py  test_explorer_runs.py  test_explorer_stats.py  test_losses.py  test_low_data_analysis.py  test_low_data_matrix.py  test_metrics.py  test_model_factory.py  test_remote_data.py  test_remote_results.py  test_repro_config.py  test_repro_datasets.py  test_repro_device.py  test_repro_factory.py  test_repro_weights.py  test_run_matrix.py  test_segmentation_dataset.py  test_train_logging.py  test_train_pipeline.py  test_visualize.py  test_visualize_predictions.py
(+52 files in other folders)
